--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uixp-elements",
-  "version": "0.0.12",
+  "version": "0.0.14",
   "type": "module",
   "license": "MIT",
   "author": "alenavarroxp",
@@ -36,7 +36,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "publish": "yarn build && npm version patch && npm publish",
+    "publish": "yarn build && npm version patch && npm publish --force",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
