--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uixp-elements",
-  "version": "0.0.2",
+  "version": "0.0.1-alpha.0",
   "type": "module",
   "license": "MIT",
   "author": "alenavarroxp",
@@ -72,7 +72,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.38",
     "storybook": "^8.1.5",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-dts": "^3.9.1",
